--- a/apps/react-17/package.json
+++ b/apps/react-17/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "format": "prettier --write \"src/**/*.{js.jsx}\""
+    "format": "prettier --write \"src/**/*.{js.jsx}\"",
+    "format:chechk": "prettier --chechk \"src/**/*.{js.jsx}\"",
+    "lint": "eslint \"src/**/*.{js.jsx}\" --quiet"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +22,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2"
-  }
+  },
+  "browserslist": [
+  "last 2 Chrome versions"
+]
 }
