--- a/apps/react-17/package.json
+++ b/apps/react-17/package.json
@@ -2,12 +2,12 @@
   "name": "react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/App.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "format": "prettier --write \"src/**/*.{js.jsx}\"",
-    "format:chechk": "prettier --chechk \"src/**/*.{js.jsx}\"",
-    "lint": "eslint \"src/**/*.{js.jsx}\" --quiet"
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "format:chechk": "prettier --chechk \"src/**/*.{js,jsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,11 @@
   "devDependencies": {
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
-    "parcel": "^2.3.3",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "parcel": "2.2.1",
     "prettier": "^2.7.1",
     "process": "^0.11.10"
   },
@@ -24,6 +28,6 @@
     "react-dom": "17.0.2"
   },
   "browserslist": [
-  "last 2 Chrome versions"
-]
+    "last 2 Chrome versions"
+  ]
 }
