--- a/apps/react-17/package.json
+++ b/apps/react-17/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "7.12.0",
     "@babel/plugin-proposal-class-properties": "7.16.7",
+    "autoprefixer": "^10.4.11",
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.4",
@@ -22,8 +23,10 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "parcel": "2.2.1",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "tailwindcss": "^3.1.8"
   },
   "dependencies": {
     "react": "17.0.2",
