--- a/apps/react-ts/package.json
+++ b/apps/react-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react",
+  "name": "react-ts",
   "version": "1.0.0",
   "description": "",
   "main": "src/App.js",
@@ -26,7 +26,8 @@
     "postcss": "8.4.6",
     "prettier": "^2.7.1",
     "process": "^0.11.10",
-    "tailwindcss": "^3.0.22"
+    "tailwindcss": "^3.0.22",
+    "typescript": "4.5.5"
   },
   "dependencies": {
     "react": "17.0.2",
