add ts @react-ts | i3-wm

--- a/apps/react-ts/.eslintrc.json
+++ b/apps/react-ts/.eslintrc.json
@@ -26,7 +26,7 @@
   "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module",
-    "project": "./tsconfig.json",
+    "project": "apps/react-ts/tsconfig.json",
     "ecmaFeatures": {
       "jsx": true
     }
