--- a/apps/react-ts/package.json
+++ b/apps/react-ts/package.json
@@ -7,7 +7,8 @@
     "dev": "parcel src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "format:chechk": "prettier --chechk \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet"
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +34,9 @@
     "process": "^0.11.10",
     "tailwindcss": "^3.0.22",
     "typescript": "4.5.5"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.39"
   },
   "dependencies": {
     "react": "17.0.2",
