--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/basics",
+  "name": "astro",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -11,6 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.3.0"
+    "@astrojs/react": "^1.1.4",
+    "@astrojs/tailwind": "^2.0.1",
+    "astro": "^1.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.24"
   }
 }
